<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#E6E6E6"
    android:id="@+id/RootView"
    >

    <include
        android:id="@+id/topBar"
        layout="@layout/topbar_1" />


    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout android:id="@+id/GlobalLayout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/etMSISDN"
                android:layout_width="match_parent"
                android:hint="@string/msisdn"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:layout_height="50dip"
                android:inputType="number"
                android:background="@android:color/transparent">
            </EditText>


            <EditText
                android:id="@+id/etMSISDNDestination"
                android:layout_width="match_parent"
                android:hint="رقم الجوال"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:layout_height="50dip"
                android:inputType="number"
                android:background="@android:color/transparent"
                >

            </EditText>

            <View
                android:id="@+id/line3"
                android:layout_marginTop="3dp"
                style="@style/EditTextLine" />


            <EditText
                android:id="@+id/etIMSI"
                android:layout_width="match_parent"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:layout_height="50dip"
                android:hint="رقم الشريحة"
                android:inputType="number"
                android:background="@android:color/transparent"
                />

            <View
                android:id="@+id/line4"
                android:layout_marginTop="3dp"
                style="@style/EditTextLine" />


            <Spinner
                android:id="@+id/mySpinnerType"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                />

            <EditText
                android:id="@+id/etIdNumber"
                android:layout_width="match_parent"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:layout_height="50dip"
                android:hint="الرقم الوطني"
                android:inputType="textCapCharacters"
                android:background="@android:color/transparent"
                />

            <View
                android:id="@+id/line5"
                android:layout_marginTop="3dp"
                style="@style/EditTextLine" />


            <EditText
                android:id="@+id/etFirstName"
                android:layout_width="match_parent"
                android:hint="الاسم الاول"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:layout_height="50dip"
                android:background="@android:color/transparent"
                android:inputType="textCapWords" />

            <View
                android:id="@+id/line6"
                android:layout_marginTop="3dp"
                style="@style/EditTextLine" />


            <EditText
                android:id="@+id/etLastName"
                android:layout_width="match_parent"
                android:hint="أسم العائلة "
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:layout_height="50dip"
                android:background="@android:color/transparent"
                android:inputType="textCapWords" />

            <View
                android:id="@+id/line7"
                android:layout_marginTop="3dp"
                style="@style/EditTextLine" />


            <!--      <AutoCompleteTextView xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/autocomplete_country"
                    android:textColor="@android:color/black"
                    android:hint="@string/nationality"

                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />-->

            <Spinner
                android:id="@+id/mySpinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:textColor="@android:color/black"
                android:text="صورة الهوية "
                android:background="@android:color/transparent"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <ImageView
                android:id="@+id/ivIDPhoto"
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:maxWidth="80dp"
                android:maxHeight="60dp"
                android:padding="6dp"
                android:src="@drawable/ic_launcher"
                android:visibility="gone"
                android:contentDescription="@string/IdPhoto"
                android:scaleType="centerInside"
                />

            <Button
                android:id="@+id/btnTakePhoto"
                android:layout_marginRight="20dip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TakePhoto"
                android:onClick="onTakePhoto" />



            <Button
                android:id="@+id/btnUpdateRequest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:visibility="invisible"
                android:layout_marginTop="10dp"
                android:onClick="onClick"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:text="@string/Update" />
            <Button
                android:id="@+id/topbarButton"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="30dip"
                android:background="@drawable/barbutton"
                android:textColor="@android:color/white"
                android:visibility="visible" />




        </LinearLayout>
    </ScrollView>

</LinearLayout>
