<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#E6E6E6"
    android:id="@+id/RootView"
    android:weightSum="1">
    
      <include
        android:id="@+id/topBar"
        layout="@layout/topbar_1" />


    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below= "@+id/topBar"
        android:padding="10dp"
        android:id="@+id/scrollView">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/main_linerLayout"
                    >
                    <TextView
                        android:id="@+id/details"
                        style="@style/HeaderText"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dip"
                        android:text="Your Details"
                        />

                    <View
                        android:id="@+id/line1"
                        style="@style/HeaderLine" />

                        <TextView
                            android:id="@+id/tvMobileNumber"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dip"
                            android:textColor="#521C70"
                            android:text="@string/MobileNumber"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:layout_gravity="left" />




                        <EditText
                            android:id="@+id/etMobileNumber"
                            style="@style/RowTextLight"
                            android:hint="Mobile Number"
                            android:background="#ffffff"
                            android:layout_marginTop="10dip"
                            android:gravity="center"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number" />
                    <View
                        android:id="@+id/leftVertical"
                        android:layout_below="@+id/etMobileNumber"
                        android:layout_marginTop="0dp"
                        style="@style/EditTextLineLeftVertical"	/>

                    <View
                        android:id="@+id/rightVertical"
                        android:layout_below="@+id/etMobileNumber"
                        android:layout_marginTop="0dp"
                        style="@style/EditTextLineRightVertical" />

                    <View
                        android:id="@+id/line2"
                        android:layout_below="@+id/etMobileNumber"
                        style="@style/EditTextLine" />


                        <TextView
                            android:id="@+id/tvIMSI"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#521C70"
                            android:text="@string/IMSI"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:layout_gravity="left" />

                        <EditText
                            android:id="@+id/etIMSI"
                            style="@style/RowTextLight"
                            android:background="#ffffff"
                            android:layout_marginTop="10dip"
                            android:hint="SIM Number"
                            android:gravity="center"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number" />
                    <View
                        android:id="@+id/leftVertica2"
                        android:layout_below="@+id/etIMSI"
                        android:layout_marginTop="0dp"
                        style="@style/EditTextLineLeftVertical"	/>

                    <View
                        android:id="@+id/rightVertica2"
                        android:layout_below="@+id/etIMSI"
                        android:layout_marginTop="0dp"
                        style="@style/EditTextLineRightVertical" />

                    <View
                        android:id="@+id/line3"
                        android:layout_below="@+id/etIMSI"
                        style="@style/EditTextLine" />


                            <RadioGroup
                                android:id="@+id/radios"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentRight="true"
                                android:layout_gravity="center"
                                android:inputType="text"
                                android:orientation="horizontal" >


                            <RadioButton
                                android:id="@+id/redio_2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Non-Saudi"
                                android:textColor="@android:color/black"
                                android:layout_marginRight="20dip"
                                android:textSize="18sp"/>

                            <RadioButton
                                android:id="@+id/redio_1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Saudi"
                                android:textColor="@android:color/black"
                                android:checked="true"
                                android:textSize="18sp"
                                 />

                            </RadioGroup>


                        <TextView
                            android:id="@+id/tvIdNumber"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#521C70"
                            android:text="@string/National_n"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:layout_gravity="left" />

                        <RelativeLayout
                            android:id="@+id/linearLayoutID"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:layout_gravity="center"
                            android:paddingTop="5dp"
                         >


                            <EditText
                               android:id="@+id/etIdNumber"
                               style="@style/RowTextLight"
                               android:background="#ffffff"
                               android:layout_marginTop="10dip"
                               android:hint="ID Number"
                               android:gravity="center"
                               android:layout_width="match_parent"
                               android:layout_height="wrap_content"
                               android:inputType="number"
                               android:layout_gravity="center"
                               android:layout_alignParentTop="true"
                               android:layout_alignParentRight="true"
                                 />

                            <View
                                android:id="@+id/leftVertica3"
                                android:layout_below="@+id/etIdNumber"
                                android:layout_marginTop="10dp"
                                style="@style/EditTextLineLeftVertical"	/>

                            <View
                                android:id="@+id/rightVertica3"
                                android:layout_below="@+id/etIdNumber"
                                android:layout_marginTop="10dp"
                                style="@style/EditTextLineRightVertical" />

                            <View
                                android:id="@+id/line4"
                                android:layout_below="@+id/etIdNumber"
                                android:layout_marginTop="10dp"
                                style="@style/EditTextLine" />


                            </RelativeLayout>


                    <TextView
                            android:id="@+id/textBorn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#521C70"
                            android:text="@string/brithday"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:layout_gravity="left" />

                        <EditText
                            android:id="@+id/editDate1"
                            style="@style/RowTextLight"
                            android:background="#ffffff"
                            android:layout_marginTop="10dip"
                            android:gravity="center"
                            android:hint="dd mm yyyy"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="date"
                            android:ems="10"
                            android:saveEnabled="true"
                            android:layout_gravity="center"/>
                    <View
                        android:id="@+id/leftVertica4"
                        android:layout_below="@+id/editDate1"
                        android:layout_marginTop="0dp"
                        style="@style/EditTextLineLeftVertical"	/>

                    <View
                        android:id="@+id/rightVertica5"
                        android:layout_below="@+id/editDate1"
                        android:layout_marginTop="0dp"
                        style="@style/EditTextLineRightVertical" />

                    <View
                        android:id="@+id/line5"
                        android:layout_below="@+id/editDate1"
                        android:layout_marginTop="0dp"
                        style="@style/EditTextLine" />


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:id="@+id/liner_11"
                        android:layout_gravity="center|center_horizontal"
                        android:layout_marginRight="10dip">



                        <Button
                            android:id="@+id/btnTakePhoto"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/TakePhoto"
                            android:layout_marginLeft="80dip"
                            android:layout_gravity="center"
                            android:onClick="onTakePhoto" />

                        <ImageView
                            android:id="@+id/ivIDPhoto"
                            android:layout_width="80dp"
                            android:layout_height="60dp"
                            android:maxWidth="80dp"
                            android:maxHeight="60dp"
                            android:padding="6dp"
                            android:src="@drawable/ic_launcher"
                            android:visibility="invisible"
                            android:contentDescription="@string/IdPhoto"
                            android:scaleType="centerInside"
                            android:layout_gravity="right"
                            />

                        </LinearLayout>



                      <LinearLayout
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:orientation="horizontal"
                          android:id="@+id/liner_112"
                          android:layout_gravity="center">

                          <TextView
                              android:id="@+id/textsigne"
                              android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:text="image contract"
                              android:textSize="20sp"
                              android:textColor="#E84086"
                              android:layout_marginRight="30dip"
                              android:layout_marginLeft="10dip"/>





                                 </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/Liner_11"
                        android:orientation="horizontal"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dip"
                        android:layout_marginRight="10dip"
                        android:layout_marginLeft="10dip">

                        <Button
                            android:id="@+id/display_imagSign"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Display contract"
                            android:textSize="18sp"
                            android:enabled="false"
                            android:onClick="onClickImage"
                            />



                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/Liner_1122"
                        android:orientation="horizontal"
                        android:layout_gravity="center"
                        android:layout_marginRight="10dip"
                        android:layout_marginLeft="10dip">


                        <Button
                            android:id="@+id/delete"
                            android:layout_width="155dip"
                            android:layout_height="wrap_content"
                            android:text="clean"
                            android:onClick="reLoadActivaty"
                            android:textSize="18sp" />

                        <Button
                            android:id="@+id/btnSendRequest"
                            android:layout_width="155dip"
                            android:layout_height="wrap_content"
                            android:onClick="onClickRegistrationUpdate"
                            android:text="Register"
                            android:textSize="18sp" />

                        </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/Liner_1123"
                        android:orientation="horizontal"
                        android:layout_gravity="center"
                        android:layout_marginRight="10dip"
                        android:layout_marginLeft="10dip">

                        <Button
                            android:id="@+id/State_Registration"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:onClick="onClickStateRE"
                            android:text="Registration State"
                            android:textSize="18sp"
                            />

                    </LinearLayout>


                    </LinearLayout>

    </ScrollView>




</RelativeLayout>